--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,11 +10,16 @@ clap = { version = "4.5", features = ["derive"] }
 rmcp = { version = "0.2.0", features = ["server", "transport-sse-server"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
+static-config = "0.1.0"
 tokio = { version = "1", features = ["full"] }
+wac-graph = "0.7.0"
+wac-types = "0.7.0"
 toml = "0.8"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 wasmtime = "34"
 wasmtime-wasi = "34"
 wasmtime-wasi-http = "34"
+wasmtime-wasi-config = "34"
+wit-component = "0.235"
 wit-parser = "0.235"
