--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,16 +5,19 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1"
-axum = "0.8"
 clap = { version = "4.5", features = ["derive"] }
 rmcp = { version = "0.2.0", features = ["server", "transport-sse-server"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
+static-config = "0.1.0"
 tokio = { version = "1", features = ["full"] }
 toml = "0.8"
-tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+wac-graph = "0.7.0"
+wac-types = "0.7.0"
 wasmtime = "34"
 wasmtime-wasi = "34"
+wasmtime-wasi-config = "34"
 wasmtime-wasi-http = "34"
+wit-component = "0.235"
 wit-parser = "0.235"
