--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,9 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1"
+axum = "0.8"
 clap = { version = "4.5", features = ["derive"] }
-rmcp = { version = "0.2.0", features = ["server", "transport-sse-server"] }
+rmcp = { version = "0.3", features = ["server", "transport-streamable-http-server", "transport-worker"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
 static-config = "0.1.0"
