add support for capability composition
Signed-off-by: markfisher <mark@modulewise.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,5 +20,6 @@ wasmtime = "34"
 wasmtime-wasi = "34"
 wasmtime-wasi-config = "34"
 wasmtime-wasi-http = "34"
+wasmtime-wasi-io = "34"
 wit-component = "0.235"
 wit-parser = "0.235"
