--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 anyhow = "1"
 axum = "0.8"
 clap = { version = "4.5", features = ["derive"] }
+oci-client = "0.14.0"
 rmcp = { version = "0.3", features = ["server", "transport-streamable-http-server", "transport-worker"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
@@ -16,6 +17,7 @@ toml = "0.8"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 wac-graph = "0.7.0"
 wac-types = "0.7.0"
+wasm-pkg-client = "0.11.0"
 wasmtime = "34"
 wasmtime-wasi = "34"
 wasmtime-wasi-config = "34"
