--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2024"
 anyhow = "1"
 axum = "0.8"
 clap = { version = "4.5", features = ["derive"] }
-composable-runtime = { git = "https://github.com/modulewise/composable-runtime" }
+composable-runtime = { git = "https://github.com/modulewise/composable-runtime", default-features = false }
 rmcp = { version = "0.6", features = ["server", "transport-streamable-http-server", "transport-worker"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
