--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ rmcp = { version = "0.14", features = ["server", "transport-streamable-http-serv
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
 tokio = { version = "1", features = ["full"] }
+tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
 [dev-dependencies]
